--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,4 +1,20 @@
+<!-- Links to Questions -->
+<!-- Name argument defined in path() functions in polls.urls model. -->
+
 {% if latest_question_list %}
+<ul>
+  {% for question in latest_question_list %}
+  <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+  {% endfor %}
+</ul>
+{% else %}
+<p>No polls are available.</p>
+{% endif %}
+
+
+<!-- V1 Hardcoded, tightly coupled approach -->
+<!-- Makes it challenging to change URLs on projects w/ lots of templates -->
+<!-- {% if latest_question_list %}
 <ul>
   {% for question in latest_question_list %}
   <li><a href="/polls/{{ question.id }}/">{{ question.question_text }}</a></li>
@@ -6,4 +22,4 @@
 </ul>
 {% else %}
 <p>No polls are available.</p>
-{% endif %}
+{% endif %} -->
