--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,6 +1,17 @@
+<!-- This template displays a radio button for each question, the value is associated with an ID -->
+
+<!--Each radio button is a choice. When someone selects a choice and submits form, POST dad choice=# -->
+
+
 <h1>{{ question.question_text }}</h1>
-<ul>
+
+{% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+
+<form action="{% url 'polls:vote' question.id %}" method="post">
+  {% csrf_token %}
   {% for choice in question.choice_set.all %}
-  <li>{{ choice.choice_text }}</li>
+  <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
+  <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
   {% endfor %}
-</ul>
+  <input type="submit" value="Vote">
+</form>
