--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,3 +1,5 @@
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap"
+  rel="stylesheet">
 <!-- This template displays a radio button for each question, the value is associated with an ID -->
 
 <!--Each radio button is a choice. When someone selects a choice and submits form, POST dad choice=# -->
