--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,3 +1,6 @@
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap"
+  rel="stylesheet">
+
 <h1>{{ question.question_text }}</h1>
 
 <ul>
