--- a/polls/static/polls/style.css
+++ b/polls/static/polls/style.css
@@ -1,19 +1,60 @@
-.question_container {
+.content_container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: "Roboto", sans-serif;
+}
+
+h1 {
+  text-transform: uppercase;
+  color: darkmagenta;
+  font-size: 40px;
+  margin-top: 50px;
+}
+
+ul {
+  list-style-type: none;
+  padding-inline-start: 0;
+}
+
+li {
+  margin: 10px;
 }
 
 li a {
-  color: purple;
+  color: darkcyan;
+  text-transform: uppercase;
   text-decoration: none;
-  list-style:none;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 600;
-  /* text-transform: uppercase; */
+  font-weight: 500;
+  font-size: 22px;
 }
 
 body {
-  background: white url("images/pastel.jpg") no-repeat;
+  height: 100vh;
+  width: 100vw;
+  background: lightcyan;
+  /* background: white url("images/pastel.jpg") no-repeat; */
+}
+
+.button {
+  height: 30px;
+  width: 50px;
+  border-radius: 10px;
+  background-color: mediumturquoise;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+}
+
+.choice {
+  font-size: 25px;
+  font-family: "Roboto", sans-serif;
+  color: darkmagenta;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
