--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,27 +1,32 @@
 <!-- STYLES -->
 {% load static %}
 
-<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}" />
 
-<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap"
-  rel="stylesheet">
+<link
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap"
+  rel="stylesheet"
+/>
 
 <!-- Links to Questions -->
 <!-- Name argument defined in path() functions in polls.urls model. -->
 
 {% if latest_question_list %}
-<div class="question_container">
+<div class="content_container">
+  <h1>Favorite Things Poll</h1>
   <ul>
     {% for question in latest_question_list %}
-    <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+    <li>
+      <a href="{% url 'polls:detail' question.id %}"
+        >{{ question.question_text }}</a
+      >
+    </li>
     {% endfor %}
   </ul>
   {% else %}
   <p>No polls are available.</p>
   {% endif %}
 </div>
-
-
 
 <!-- V1 Hardcoded, tightly coupled approach -->
 <!-- Makes it challenging to change URLs on projects w/ lots of templates -->
