--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,13 +1,6 @@
-<!-- STYLES -->
-{% load static %}
-
-<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}" />
-
-<link
-  href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap"
-  rel="stylesheet"
-/>
-
+{% extends 'polls/base.html' %}
+<!-- Block Content -->
+{% block content %}
 <!-- Links to Questions -->
 <!-- Name argument defined in path() functions in polls.urls model. -->
 
@@ -39,3 +32,4 @@
 {% else %}
 <p>No polls are available.</p>
 {% endif %} -->
+{% endblock content %}
