--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -7,6 +7,12 @@
   rel="stylesheet"
 />
 
+{% if request.user.is_authenticated %}
+<p>
+  Hello, {{ request.user.username }}!
+</p>
+{% endif %}
+
 <p align="right">
   <a href="/accounts/login">Login</a>
   <a href="/accounts/logout">Logout</a>
