--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -8,7 +8,7 @@
   <h1>{{ question.question_text }}</h1>
 
   {% if question.author %}
-  <p>Author: {{ question.author.username }}</p>
+    <p>Author: {{ question.author.username }}</p>
   {% endif %}
 
   {% if error_message %}
@@ -22,5 +22,17 @@
     {% endfor %}
     <input class="button" type="submit" value="Vote" />
   </form>
+
+  {% if request.user == question.author %}
+    <!-- choice creation form -->
+    <h3>Create a new Choice!</h3>
+    <form method='POST'>
+        {% csrf_token %}
+        {{ choice_form.as_p }}
+
+      <input type="submit" value="Submit new choice!">
+    </form>
+  {% endif %}
+
 </div>
 {% endblock content %}
