--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -28,8 +28,12 @@
 
 
 <p align="right">
-  <a href="/accounts/login">Login</a>
-  <a href="/accounts/logout">Logout</a>
+  {% if request.user.is_authenticated %}
+    <a href="/accounts/logout">Logout</a>
+  {% else %}
+    <a href="/accounts/login">Login</a>
+  {% endif %}
+
 </p>
 
 {% block content %}
